minha solução para a criação da página de captura.

--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,48 @@
     <title>Workshop</title>
     <link rel="stylesheet" href="./css/style1.css">
 </head>
+<div class="container">
+    <header class="header">
+        <h1>PARTICIPE DO WORKSHOP QUE VAI MUDAR O SEU NEGÓCIO</h1>
+    </header>
+
+    <main class="main">
+        <section class="section1">
+            <h3>GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h3>
+            <p>Neste evento você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem
+                precisar contar com a sorte.</p>
+            <div class="form">
+                <form action="post">
+                    <input type="text" name="nome" id="nome" placeholder="Nome"><label for="nome"></label>
+                    <input type="email" name="email" id="email" placeholder="seu_e-mail@gmail.com"><label
+                        for="email"></label>
+
+                    <select name="estado" id="estado">
+                        <option value="SP" checked>São Paulo</option>
+                        <option value="RJ">Rio de Janeior</option>
+                        <option value="ES">Espirito Santo</option>
+                        <option value="MG">Minas Gerais</option>
+                    </select>
+                    <input type="submit" value="INSCREVA-SE" id="btn">
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <figure>
+            <img src="./images/face.jpg" alt="foto três por quatro do rosto do palestrante.">
+            <div class="section2">
+                <h2>O Palestrante</h2>
+                <p>Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional.
+                    Prepare-se para sair do evento com uma nova visão do que é possível ser feito para o seu negócio
+                    decolar.</p>
+                <p>Formado em Marketing pela Universidade XYZ e fundador da MarkUp, a empresa vencedora dos últimos 5
+                    Prêmios MarketingBr.</p>
+            </div>
+        </figure>
+    </footer>
+</div>
 
 <body>
 
