--- a/index1.html
+++ b/index1.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/ico.png" type="image/png">
     <title>Workshop</title>
-    <link rel="stylesheet" href="./css/style1.css">
+    <link rel="stylesheet" href="./css/style1.css" type="text/css">
 </head>
 <div class="container">
     <header class="header">
-        <h1>PARTICIPE DO WORKSHOP QUE VAI MUDAR O SEU NEGÓCIO</h1>
+        <h1 class="title">PARTICIPE DO WORKSHOP QUE VAI MUDAR O SEU NEGÓCIO</h1>
     </header>
 
     <main class="main">
