--- a/index1.html
+++ b/index1.html
@@ -17,8 +17,9 @@
     <main class="main">
         <section class="section1">
             <div class="form">
-                <h2>GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
-                <p>Neste evento você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem
+                <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
+                <p class="mb">Neste evento você vai aprender todos os segredos que vão te fazer ser um empreendedor de
+                    sucesso sem
                     precisar contar com a sorte.</p>
                 <form action="post">
                     <input type="text" name="nome" id="nome" placeholder="Nome"><label for="nome"></label>
